<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moore.finalproject.NamingFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_prefix"
            style="@style/TextAppearence.TextInputLayout.White"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/prefixET"
                style="@style/AppTheme.EditText"
                android:hint="@string/prefix"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_box"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_prefix"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/boxET"
                style="@style/AppTheme.EditText"
                android:hint="@string/box"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_increment"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_box"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/incrementingET"
                style="@style/AppTheme.EditText"
                android:hint="@string/incrementing"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_naming"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_increment"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/namingET"
                style="@style/AppTheme.EditText"
                android:focusable="false"
                android:hint="@string/naming"
                android:imeOptions="actionDone"
                android:inputType="none"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/namingRadioGroup"
            style="@style/AppTheme.RadioButtons"
            android:layout_below="@id/input_layout_naming">

            <RadioButton
                android:id="@+id/fileNameSameRB"
                style="@style/AppTheme.RadioButtons"
                android:checked="true"
                android:text="@string/file_name_same_as_control" />

            <RadioButton
                android:id="@+id/fileNameDifferentRB"
                style="@style/AppTheme.RadioButtons"
                android:text="@string/file_name_different_from_control" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_differentControlNum"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/namingRadioGroup"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/differentControlNumET"
                style="@style/AppTheme.EditText"
                android:hint="@string/different_control_number"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_volume"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_differentControlNum"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/volumeET"
                style="@style/AppTheme.EditText"
                android:hint="@string/starting_volume"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginBottom="45dp" />

        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

</ScrollView>
