<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moore.finalproject.ClientFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <!-- TODO: Update blank fragment layout -->

        <!--
        <TextView
            style="@style/AppTheme.Labels"
            android:id="@+id/clientNameLbl"
            android:text="@string/client_name" />
    -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_clientName"
            style="@style/TextAppearence.TextInputLayout.White"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/clientNameET"
                style="@style/AppTheme.EditText"
                android:hint="@string/client_name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:singleLine="true">

                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_contactName"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_clientName"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/contactNameET"
                style="@style/AppTheme.EditText"
                android:hint="@string/contact_name"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_contactName"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/addressET"
                style="@style/AppTheme.EditText"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_clientMatterNum"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_address"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/clientMatterNumET"
                style="@style/AppTheme.EditText"
                android:hint="@string/client_matter"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_emailAddress"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_clientMatterNum"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/emailET"
                style="@style/AppTheme.EditText"
                android:hint="@string/email_address"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phoneNumber"
            style="@style/TextAppearence.TextInputLayout.White"
            android:layout_below="@id/input_layout_emailAddress"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White">

            <EditText
                android:id="@+id/phoneNumberET"
                style="@style/AppTheme.EditText"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:layout_marginBottom="45dp" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</ScrollView>